UI changes: - When spinner is displayed, use default blue for the spinner icon so it's noticeable in light and dark theme.
WHen rendering field panel
- When detecting a nested field/array that contain child field, don't simple flatten hierachy, first render the parent field in a collapsible/expandle pattern, using the chevron icon instead of select box. Then display child fild indented in a list that is visible when users click chevron icon to expand the list. Use checkbox list for field that doesn't have any child fields. Use array icon for nested field.
- Use String icon 'T' for the string type data instead of document.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -97,7 +97,7 @@
   --btn-primary-lg-focus-ring: hsl(var(--btn-primary-lg-focus-ring-hsl));
 
   /* Custom Primary LG Disabled Button Styling */
-  --btn-primary-lg-disabled-bg: var(--lg-gray-dark-2);
+  --btn-primary-lg-disabled-bg: var(--lg-gray-light-2);
   --btn-primary-lg-disabled-fg: var(--lg-gray-base);
   --btn-primary-lg-disabled-border: var(--lg-gray-light-1);
   --btn-primary-lg-disabled-icon-hsl: var(--lg-gray-light-1-raw); /* Uses raw HSL */
